<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.pentaho.di</groupId>
  <artifactId>pdi</artifactId>
  <version>9.0.0.1-462</version>
  <packaging>pom</packaging>

  <name>Pentaho Data Integration</name>
  <description>Container pom for Pentaho Data Integration modules</description>
  <url>http://www.pentaho.com</url>

  <parent>
    <groupId>org.pentaho</groupId>
    <artifactId>pentaho-ce-jar-parent-pom</artifactId>
    <version>9.0.0.1-462</version>
  </parent>

  <scm>
    <developerConnection>scm:git:git@github.com:pentaho/pentaho-kettle.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
    <license>
      <name>GNU Lesser General Public License, Version 2.1</name>
      <url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt</url>
      <distribution>repo</distribution>
      <comments></comments>
    </license>
    <license>
      <name>GNU Lesser General Public License, Version 3.0</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
      <comments></comments>
    </license>
  </licenses>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <maven.build.timestamp.format>yyyy-MM-dd hh.mm.ss</maven.build.timestamp.format>
    <maven-surefire-plugin.argLine>-Duser.timezone=UTC -Dfile.encoding=UTF-8 -Duser.language=en -Duser.country=US</maven-surefire-plugin.argLine>

    <!-- License Configuration -->
    <license.licenseName>apache_v2</license.licenseName>

    <!-- Pentaho dependencies -->
    <commons-xul.version>9.0.0.1-462</commons-xul.version>
    <pentaho-metastore.version>9.0.0.1-462</pentaho-metastore.version>

    <!-- Third-party dependencies -->
    <org.eclipse.swt.version>4.6</org.eclipse.swt.version>
    <js.version>1.7R3</js.version>
    <commons-codec.version>1.10</commons-codec.version>
    <commons-beanutils.version>1.9.3</commons-beanutils.version>
    <guava.version>17.0</guava.version>
    <encoder.version>1.2</encoder.version>
    <h2.version>1.2.131</h2.version>
    <wstx-asl.version>3.2.4</wstx-asl.version>

    <!-- Test dependencies -->
    <mockito-all.version>1.10.19</mockito-all.version>

    <powermock-module-junit4.version>1.7.3</powermock-module-junit4.version>
    <powermock-api-mockito.version>1.7.3</powermock-api-mockito.version>
    <java-hamcrest.version>2.0.0.0</java-hamcrest.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.pentaho</groupId>
        <artifactId>commons-xul-core</artifactId>
        <version>${commons-xul.version}</version>
      </dependency>
      <dependency>
        <groupId>org.pentaho</groupId>
        <artifactId>commons-xul-swing</artifactId>
        <version>${commons-xul.version}</version>
      </dependency>
      <dependency>
        <groupId>org.pentaho</groupId>
        <artifactId>commons-xul-swt</artifactId>
        <version>${commons-xul.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.eclipse.swt</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>pentaho</groupId>
        <artifactId>metastore</artifactId>
        <version>${pentaho-metastore.version}</version>
      </dependency>

      <!-- Third-party dependencies -->
      <dependency>
        <groupId>org.eclipse.swt</groupId>
        <artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
        <version>${org.eclipse.swt.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>rhino</groupId>
        <artifactId>js</artifactId>
        <version>${js.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons-beanutils.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>commons-codec</groupId>
        <artifactId>commons-codec</artifactId>
        <version>${commons-codec.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.owasp.encoder</groupId>
        <artifactId>encoder</artifactId>
        <version>${encoder.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>${h2.version}</version>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.codehaus.woodstox</groupId>
        <artifactId>wstx-asl</artifactId>
        <version>${wstx-asl.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-all</artifactId>
        <version>${mockito-all.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>java-hamcrest</artifactId>
        <version>${java-hamcrest.version}</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>*</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.powermock</groupId>
        <artifactId>powermock-module-junit4</artifactId>
        <version>${powermock-module-junit4.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.powermock</groupId>
        <artifactId>powermock-api-mockito</artifactId>
        <version>${powermock-api-mockito.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <Compile-Timestamp>${maven.build.timestamp}</Compile-Timestamp>
              <Compile-User>${user.name}</Compile-User>
              <Implementation-ProductID>${project.artifactId}</Implementation-ProductID>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>base</id>
      <activation>
        <property>
          <name>!skipDefault</name>
        </property>
      </activation>
      <modules>
        <module>engine-ext</module>
        <module>core</module>
        <module>engine</module>
        <module>dbdialog</module>
        <module>ui</module>
      </modules>
    </profile>
    <profile>
      <id>plugins</id>
      <activation>
        <property>
          <name>!skipDefault</name>
        </property>
      </activation>
      <modules>
        <module>plugins</module>
      </modules>
    </profile>
    <profile>
      <id>assemblies</id>
      <activation>
        <property>
          <name>!skipDefault</name>
        </property>
      </activation>
      <modules>
        <module>assemblies</module>
      </modules>
    </profile>
  </profiles>


  <repositories>
    <repository>
      <id>pentaho-public</id>
      <name>Pentaho Public</name>
      <url>http://nexus.pentaho.org/content/groups/omni/</url>
      <releases>
        <enabled>true</enabled>
        <updatePolicy>daily</updatePolicy>
      </releases>
      <snapshots>
        <enabled>true</enabled>
        <updatePolicy>interval:15</updatePolicy>
      </snapshots>
    </repository>
  </repositories>

</project>
